# REDCRAFT

./: .CMakeLists.txt.un~  .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Dockerfile  PreLoad.cmake  README.rst  clean.sh  requirements.txt
docs/: README.rst  conf.py  contributors.rst  index.rst
docs/usage/: .installation.rst.un~  features.rst  installation.rst  installation.rst~  usage.rst
scripts/: All.space  CalcBBRMSD.prl  CheckMemoryLeaks.py  CreateAngles.prl  CreateVectors.prl  ExtractRDC.prl  ExtractRMSD.prl  FilterJ.prl  FilterPhiPsi.prl  Fragments.prl  MakeFirstAngles.prl  MakeXplor.prl  MakeXplorDih.prl  MakeXplorDihAngleFile.prl  MakeXplorDihRedcraftOutput.prl  MakeXplorJ.prl  MakeXplorXdip.prl  Mol_Scr.prl  NegateRDC.prl  NohaH.prl  REDCAT2REDCRAFT.prl  REDCRAFT-ninecol.prl  REDCRAFT2REDCAT.prl  RemoveRDC.prl  TALOS.prl  TopStructures.prl  TraceHistory.prl  XplorTorsion2REDCRAFT.prl  appendangles.prl  autoweight.pl  bbrmsd  bmrb2redcat.prl  checkangles.pl  convertcasp.py  convertoldrdc.py  dat2rdc.prl  fillgap.prl  formatChange.sh  getsequence.py  growpdbs.prl  (+17 more)
scripts/Developer/: CalcBBRMSD_cac.prl  REDCAT2REDCRAFT_cac.prl  REDCRAFT-excel.prl  aaList.txt  addError.prl  averageRDC.prl  compOrder.prl  excel-REDCRAFT.prl  genRedcat.prl  mult_redcat2redcraft.prl  subRDC.prl
scripts/refinement/: README  constrained.prl  minimize.prl  rcsa.prl  unconstrained.prl
src/: .shell.cpp.un~  aminoAcidMain.cpp  aminoacid.cpp  aminoacid.h  angles.cpp  angles.h  atom.cpp  atom.h  cluster_collection.cpp  cluster_collection.h  cmin.cpp  diagnostics.h  exmin.cpp  functions.cpp  lm-min.cpp  mainPolypeptide.cpp  matrix.cpp  matrix.h  molan.cpp  pdbgen.cpp  pdbgen2.cpp  polypeptide.cpp  polypeptide.h  redcat.cpp  redcat.h  redcraft.cpp  redcraft.h  rotation.cpp  rotation.h  shell.cpp  shell.cpp~  stage1.cpp  stage2.cpp  stage_1_point_5.cpp  tensor.cpp  tensor.h  tstorage.cpp  tstorage.h  umin.cpp
src/gui/redcraft/: .qmake.stash  analysissuite.cpp  analysissuite.h  analysissuite.ui  breeze.qrc  config.cpp  dialogsearchdepth.cpp  dialogsearchdepth.h  dialogsearchdepth.ui  dynamicprofile.cpp  dynamicprofile.h  histogram.cpp  histogram.h  icons.qrc  io.cpp  light.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_analysissuite.cpp  moc_dialogsearchdepth.cpp  moc_mainwindow.cpp  moc_scatter.cpp  pdbviewer.cpp  pdbviewer.h  qmake_qmake_immediate.qrc  qrc_breeze.cpp  qrc_icons.cpp  qrc_qmake_qmake_immediate.cpp  redcat.cpp  redcraft.pro  scatter.cpp  scatter.h  stage0.cpp  stage1.cpp  stage2.cpp  ui_analysissuite.h  ui_dialogsearchdepth.h  ui_mainwindow.h
src/gui/redcraft/pdb.pxd/: metadata.info
src/gui/redcraft/pdb.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
src/gui/redcraft/pdb.pxd/data/: C27D6F7A-F956-4119-B616-5BCA31B34198
src/gui/redcraft/redcraft.app/Contents/: Info.plist
src/gui/redcraft/redcraft.app/Contents/MacOS/: redcraft
src/gui/rmsd/: BackBoneGUIWidget.pro  FloatArray.cpp  FloatArray.h  Matrix.cpp  Matrix.h  PDBParser.cpp  PDBParser.h  Vector.cpp  Vector.h  gui.cpp  gui.h  gui.ui  main.cpp
src/lm/: liblevmar.a.bkp  lm.h  lm_core.c  lmbc_core.c
src/rude_config/: ConfigImpl.cpp  File.h  ParserJuly2004.cpp
test/: .CMakeLists.txt.un~  CMakeLists.txt  CTestTestfile.cmake
test/redcraft/: redcraft_tests.cpp
test/redcraft/sample_1a1z_1Hz/: default.conf  nefRDC.1  nefRDC.2  reverse_with_decimation.conf
